# ds-template-project

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
